--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ quarkus.datasource.password=docker
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
 quarkus.datasource.jdbc.max-size=16
+
+#Teste
+%test.quarkus.datasource.db-kind=h2 
+%test.quarkus.datasource.username=sa
+
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:default
+%test.quarkus.datasource.jdbc.max-size=16
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.log.sql=true
