--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.datasource.password=docker
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
 quarkus.datasource.jdbc.max-size=16
-
+quarkus.swagger-ui.always-include=true
 #Teste
 %test.quarkus.datasource.db-kind=h2 
 %test.quarkus.datasource.username=sa
